<resources>
    <string name="app_name">Матура по БЕЛ</string>

    <string name="title">МАТУРА ПО БЪЛГАРСКИ ЕЗИК И ЛИТЕРАТУРА</string>

    <string name="quill">Quill</string>
    <string name="start">ЗАПОЧНИ</string>
    <string name="description">Приложението разполага с всички въпроси от първи модул от редовна и поправителна сесии на ДЗИ по БЕЛ, давани в периода от 2012г. до 2018г. На случаен принцип се генерират 22 въпроса, всеки от които има само един верен отговор. \n Успех!</string>
    <string name="made_in">Направено с \   </string>
    <string name="Bulgaria">\   в България</string>

    <string name="result">Резултат:</string>
    <string name="emoji_description">Result-friendly emoji.</string>
    <string name="back_to_quiz">СВЕРИ ОТГОВОРИТЕ СИ</string>

    <string name="arrow_left_description">Go to previous question.</string>
    <string name="arrow_right_description">Go to next question</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twenty_one">21</string>
    <string name="twenty_two">22</string>
    <string name="submit">ПРЕДАЙ</string>

</resources>
