<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="32dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:id="@+id/basic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/launch"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/emerald_background"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/app_logic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="?android:attr/colorForeground"
                android:textSize="10sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/made"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/left_of_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_in"
                android:textColor="?android:attr/colorForeground"
                android:textSize="10sp"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/heart"
                android:contentDescription="heart"/>

            <TextView
                android:id="@+id/right_of_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bulgaria"
                android:textColor="?android:attr/colorForeground"
                android:textSize="10sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
