<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="24sp"
            android:textStyle="italic"/>

        <ImageView
            android:id="@+id/emoji"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/emoji_description"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/emerald_background"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/back_to_quiz"
            android:textColor="@color/white"/>

    </LinearLayout>
</RelativeLayout>
